styling/style.css
a {
  text-decoration: none;
}

body {
  font-family: "Noto Sans", sans-serif;
}

footer {
  text-align: center;
}

h1 {
  color: #494949;
  font-size: 28px;
  font-weight: 100;
  line-height: 28px;
  margin-bottom: 12px;
}

h2 {
  color: #ea0707;
  font-weight: bolder;
}

h3 {
  font-size: 25px;
}

li {
  color: #606060;
  font-size: 16;
  font-weight: 100;
  height: 19px;
  line-height: 1px;
  list-style: none;
  text-transform: capitalize;
}

ul {
  margin: 0;
  padding: 0;
}

.btn-danger {
  color: #fff;
  background-color: #f7aa00;
  border-color: #f7aa00;
}

.btn-danger,
.btn-info {
  margin-left: 5px;
  margin-bottom: 5px;
}

.btn-danger:hover,
.btn-danger:active {
  background-color: #df9b07 !important;
  border-color: #df9b07 !important;
  color: #fff !important;
}

.btn-info:hover,
.btn-info:active {
  background-color: #6fb984 !important;
  border-color: #6fb984 !important;
  color: #fff !important;
}

.btn-info {
  color: #fff;
  background-color: #76c38c;
  border-color: #76c38c;
}

.cloudy-sun {
  left: 90px;
  margin: 0 auto;
  position: relative;
  top: 15px;
  width: 105px;
}

.container2 {
  margin-left: 115px;
  margin-top: 12px;
  margin-bottom: auto;
}

.container2:hover {
  cursor: default;
}

.date {
  color: #41b8d3;
  font-style: italic;
  top: 70px;
  position: relative;
}

.day {
  color: #494949;
  font-weight: bold;
}

.degreeUnits {
  position: relative;
  top: -32px;
  right: 3px;
}

.divider {
  color: #000;
  height: 2px;
}

.displayedWeatherIcon {
  position: relative;
  bottom: 16px;
}

.future-forecast {
  margin-bottom: 20px;
  margin-top: 15px;
  text-align: center;
}

.forecast-date {
  font-size: 16px;
  opacity: 0.7;
}

.low-temp {
  opacity: 0.8;
}

.temperature {
  color: #000000;
  font-size: 64px;
  font-weight: 300px;
  line-height: 0.5px;
}

.weather-app {
  background: linear-gradient(
    179.7deg,
    rgb(197, 214, 227) 2.9%,
    rgb(145, 184, 218) 97.1%
  );
  border: 1px solid #878787;
  border-radius: 10px;
  padding: 15px;
  margin: 20px auto;
  max-width: 800px;
}

.weatherCondition {
  margin-bottom: 10px;
}

.weather-forecast-temperatures {
  font-size: 14px;
}

.weather-info {
  font-size: 14px;
  margin-top: 5px;
}

.weather-temperature .active {
  color: rgb(33, 33, 33);
  cursor: default;
}

.weather-pics {
  font-size: 45px;
  margin-bottom: 8px;
  width: 65px;
}

@media (min-width: 1200px) {
  .container {
    max-width: 900px;
  }
}

